fix stretching image and div

--- a/main.css
+++ b/main.css
@@ -68,10 +68,10 @@ h3 {
 
 .rebels {
     background: url('images/rebelalliance.png');
-    background-size: 7vh;
+    background-size: 60px;
     background-position: center;
-    width: 8vw;
-    height: 7.5vh;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: solid white;
     margin: auto;
